FULLY WORKING HOLY COW

--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="popup.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <script src="jquery-3.1.1.min.js"></script>
     <script src="angular.js"></script>
     <script src="popup.js"></script>
-    <script src="jquery-3.1.1.min.js"></script>
 
   </head>
   <body id="bodyTag" ng-controller="episodeBrainController">
@@ -30,7 +30,7 @@
 
           <span class="show-listing">
 
-          {{show.name}}: 
+          {{show.name}} 
 
           <a ng-href="{{show.url}}">
             {{show.episode}}
