Update 1.2 - Add FIXED

--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@
 
     <div class="footer">
       <div class="add">
-        <button id="add" class="add-button btn btn-success btn-circle" ><img src="images/add.svg" ng-click="addWebsite()"></button>
+        <button id="add" ng-click="addWebsite()" class="add-button btn btn-success btn-circle" ><img src="images/add.svg"></button>
       </div>
     </div>
 
