--- a/popup.html
+++ b/popup.html
@@ -71,7 +71,7 @@
         3. That's it!
         <br>
         <br>
-        Next time your watching a show on that website, we'll find out and keep track of it right here!
+        Next time you're watching a show on that website, we'll find out and keep track of it right here!
         <br>
       </div>
       
