--- a/popup.html
+++ b/popup.html
@@ -17,12 +17,15 @@
   </head>
   <body id="bodyTag" ng-controller="episodeBrainController">
 
-
     <div class="header">
       <img class="logo" src="images/header.png">
     </div>
 
     <hr>
+
+    <div class="overlay">
+      <img id="spinner" src="./images/spinner.svg">
+    </div>
 
     <div class="bodyspace">
 
